# rust-ancrypto

ancryptor/: Cargo.toml
ancryptor/src/: lib.rs
ancryptor/tests/: integrations_tests.rs
ancryptor_global/: Cargo.toml
ancryptor_global/src/: io.rs  lib.rs  system.rs
ancryptor_jni/: Cargo.toml  build.rs
ancryptor_jni/.cargo/: config
ancryptor_jni/src/: lib.rs
