[package]
name = "ancryptor_jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

# Dynamic Library: https://doc.rust-lang.org/reference/linkage.html
[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
phf = { version = "0.11.1", features = ['macros'] }
serde = { version = '1.0.118', features = ['derive'] }
toml = "0.7.2"
ancryptor = { path = "../ancryptor", version = "0.1.0" }
ancryptor_global = { path = "../ancryptor_global", version = "0.1.0" }

[build-dependencies]
phf = { version = "0.11.1", features = ['macros'] }
serde = { version = '1.0.118', features = ['derive'] }
toml = "0.7.2"
ancryptor_global = { path = "../ancryptor_global", version = "0.1.0" }
